--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>intro</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -26,7 +26,7 @@ header {
 nav {
   float: left;
   width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
+  height: 300px; 
   background: #ccc;
   padding: 20px;
 }
@@ -42,8 +42,7 @@ article {
   padding: 20px;
   width: 70%;
   background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
-}
+  height: 300px; 
 
 /* Clear floats after the columns */
 section::after {
@@ -75,38 +74,57 @@ footer {
 <header>
   <h2>Fru Emmanuel Angelbert Afong</h2>
   <h4>A curious Mind, a heart for people and the eyes of a Designer</h4>
+  <img src="ff.jpg" alt="ff" style="width:128px;height:128px;">
 </header>
-<h2>CSS Layout Float</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
+<h2>You Can Always Count On Me When</h2>
+<p>You want or need a different point of views on a particular subject</p>
+
 
 <section>
   <nav>
     <table>
         <tr>
-          <th>Age</th>
+          <th>Age:</th>
           <td>23</td>
           
         </tr>
         <tr>
-          <th>Gender</th>
+          <th>Gender:</th>
           <td>Male</td>
         </tr>
         <tr>
-            <th>Colour</th>
+            <th>Colour:</th>
             <td>Black and WHite</td>
           </tr>
           <tr>
-            <th>Meal</th>
+            <th>Meal:</th>
             <td>Eru</td>
           </tr>
       </table>
-    
+      <h1>Pinapple On Pizza</h1>
+      <form action="/action_page.php">
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Yes">
+        <label for="vehicle1"> yes</label><br>
+        <input type="checkbox" id="vehicle2" name="vehicle2" value="No">
+        <label for="vehicle2"> no</label><br>
+      </form>   
   </nav>
-  
+ 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <h2>My Hobbies Are</h2>
+    <ul>
+        <li>Basketball</li>
+        <li>Chilling
+          <ul>
+            <li>movies</li>
+            <li>skating</li>
+            <li>Gaming</li>
+          </ul>
+        </li>
+        <li>Designing</li>
+      </ul>  
+    <h1>Story Time;</h1>
+    <p>i was born in the river and i lived in the river for so long</p>
     <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
   </article>
 </section>
