--- a/index.html
+++ b/index.html
@@ -1,85 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>intro</title>
+<title>Intro</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; 
-  background: #ccc;
-  padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; 
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
+    <link rel="stylesheet" href="style.css">  
 </head>
 <body>
 
 
 <header>
-  <h2>Fru Emmanuel Angelbert Afong</h2>
-  <h4>A curious Mind, a heart for people and the eyes of a Designer</h4>
+  <h2>Emmanuel Angelbert Fru Afong</h2>
+  <h4>A Curious Mind, a Heart For People And The Eyes Of A Designer</h4>
   <img src="ff.jpg" alt="ff" style="width:128px;height:128px;">
 </header>
 <h2>You Can Always Count On Me When</h2>
-<p>You want or need a different point of views on a particular subject</p>
-
-
+<p>You Need Or Want A Different Point Of View On A Particular Subject</p>
+<p>Or If You Feel Stuck In A Box And Need A Way Out? Just holla at Me</p>
 <section>
   <nav>
     <table>
@@ -94,43 +31,52 @@ footer {
         </tr>
         <tr>
             <th>Colour:</th>
-            <td>Black and WHite</td>
+            <td>Black, Sky Blue, White and Red</td>
           </tr>
           <tr>
             <th>Meal:</th>
-            <td>Eru</td>
+            <td>Everything with Rice </td>
           </tr>
       </table>
       <h1>Pinapple On Pizza</h1>
       <form action="/action_page.php">
         <input type="checkbox" id="vehicle1" name="vehicle1" value="Yes">
-        <label for="vehicle1"> yes</label><br>
+        <label for="vehicle1"> Yes, I Love It Omg</label><br>
         <input type="checkbox" id="vehicle2" name="vehicle2" value="No">
-        <label for="vehicle2"> no</label><br>
+        <label for="vehicle2"> No, Not For Me</label><br>
       </form>   
   </nav>
- 
+  <h2>My Hobbies Are</h2>
+  <ul>
+      <li>Basketball</li>
+      <li>Chilling
+        <ul>
+          <li>movies</li>
+          <li>skating</li>
+          <li>Gaming</li>
+        </ul>
+      </li>
+      <li>Designing</li>
+    </ul>  
   <article>
-    <h2>My Hobbies Are</h2>
-    <ul>
-        <li>Basketball</li>
-        <li>Chilling
-          <ul>
-            <li>movies</li>
-            <li>skating</li>
-            <li>Gaming</li>
-          </ul>
-        </li>
-        <li>Designing</li>
-      </ul>  
+    
     <h1>Story Time;</h1>
-    <p>i was born in the river and i lived in the river for so long</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <p>2 years ago, when i started my brand i went to a modelling agency to do a photo look book for the new collection</p>
+    <p>Standing there, The manager looked at me and said "can you walk across the hall and walk right back let me see?"</p>
+    <p>I said "sure why not", but in my head while i was walking i thought he was tripping or on some cheap drugs or something</p>
+    <p> While i walking back he stared at me and he said "Emmanuel why don't you do the Antwerp Fashion Weekend for me next weekend for free </p>
+    <p>and i will do your photo book for free you won't have to pay a dime", .Have in mind that the Photo book costed about 250 euro at the time</p>
+    <p> So i agreed without hesistating even though i had the money to pay then. 1 years after no photo book, no follow up emails and no call replies</p>
+    <p> 2 years later,then i became seriously in need of the photo look book, so i insisted called and sent emails requesting to pay for it</p>
+    <p>2 days later, i got the reply and booked for the photo shoot and paid 250 Euros for it, meaning i worked for free at the Antwerp Fashion Weekend</p>
   </article>
 </section>
 
 <footer>
-  <p>Footer</p>
+  
+<a href="https://minjie0501.github.io/css-introduction/" target="_blank">Min jie</a>
+<a href="default.asp" target="_blank">My Link</a>
+<a href="default.asp" target="_blank">Heylen</a> 
 </footer>
 
 </body>
