add to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <header>
   <h2>Emmanuel Angelbert Fru Afong</h2>
+  <h4><i> Dont't Be Busy, Be Productive </i></h4>
   <h4>A Curious Mind, a Heart For People And The Eyes Of A Designer</h4>
   <img src="ff.jpg" alt="ff" style="width:128px;height:128px;">
 </header>
@@ -21,8 +22,8 @@
   <nav>
     <table>
         <tr>
-          <th>Age:</th>
-          <td>23</td>
+          <th>Date Of Birth</th>
+          <td>19 July 1998 (Cancer Baby)</td>
           
         </tr>
         <tr>
@@ -34,8 +35,8 @@
             <td>Black, Sky Blue, White and Red</td>
           </tr>
           <tr>
-            <th>Meal:</th>
-            <td>Everything with Rice </td>
+            <th>Best Meal:</th>
+            <td>Everything with Rice  </td>
           </tr>
       </table>
       <h1>Pinapple On Pizza</h1>
