add to index.html

--- a/index.html
+++ b/index.html
@@ -62,22 +62,24 @@
   <article>
     
     <h1>Story Time;</h1>
-    <p>2 years ago, when i started my brand i went to a modelling agency to do a photo look book for the new collection</p>
+    <p>2 years ago, When i started my Brand i went to a modelling agency to do a photo look book for the new collection</p>
     <p>Standing there, The manager looked at me and said "can you walk across the hall and walk right back let me see?"</p>
     <p>I said "sure why not", but in my head while i was walking i thought he was tripping or on some cheap drugs or something</p>
     <p> While i walking back he stared at me and he said "Emmanuel why don't you do the Antwerp Fashion Weekend for me next weekend for free </p>
-    <p>and i will do your photo book for free you won't have to pay a dime", .Have in mind that the Photo book costed about 250 euro at the time</p>
-    <p> So i agreed without hesistating even though i had the money to pay then. 1 years after no photo book, no follow up emails and no call replies</p>
-    <p> 2 years later,then i became seriously in need of the photo look book, so i insisted called and sent emails requesting to pay for it</p>
-    <p>2 days later, i got the reply and booked for the photo shoot and paid 250 Euros for it, meaning i worked for free at the Antwerp Fashion Weekend</p>
+    <p>and i will do your look book for free awsell you won't have to pay a dime" .Have in mind that the Photo book costed about 250 euro at the time</p>
+    <p> So i agreed without hesistating even though i had the money. 1 years after no Look Book, no follow up emails, no call or replies</p>
+    <p> 2 years later,then i became seriously in need of the look book, so i called and sent an email mentioning that i will pay for the look book if he won't do it for free as we agreed</p>
+    <p>2 days later, i got the reply and was booked for the photo shoot, so i paid the photographer 250 Euros for it, meaning i worked for free at the Antwerp Fashion Weekend 2019</p>
   </article>
+
+  <p>Morals of the story, Sometimes, We can not see what distracts us from our purpose untill its too late, because how could we know </p>
 </section>
 
 <footer>
   
 <a href="https://minjie0501.github.io/css-introduction/" target="_blank">Min jie</a>
-<a href="default.asp" target="_blank">My Link</a>
-<a href="default.asp" target="_blank">Heylen</a> 
+<a href="https://ffiinesse.github.io/html-introduction/" target="_blank">My Link</a>
+<a href="https://katyaheylen.github.io/html-introduction/" target="_blank">Heylen</a> 
 </footer>
 
 </body>
