add to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
   <h2>Emmanuel Angelbert Fru Afong</h2>
-  <h4><i> Dont't Be Busy, Be Productive </i></h4>
+  <h4><i> Don't Be Busy, Be Productive </i></h4>
   <h4>A Curious Mind, a Heart For People And The Eyes Of A Designer</h4>
   <img src="ff.jpg" alt="ff" style="width:128px;height:128px;">
 </header>
@@ -36,7 +36,7 @@
           </tr>
           <tr>
             <th>Best Meal:</th>
-            <td>Everything with Rice  </td>
+            <td>Everything With Rice  </td>
           </tr>
       </table>
       <h1>Pinapple On Pizza</h1>
@@ -47,13 +47,14 @@
         <label for="vehicle2"> No, Not For Me</label><br>
       </form>   
   </nav>
-  <h2>My Hobbies Are</h2>
+  <h2>Some Of My Hobbies Are</h2>
   <ul>
       <li>Basketball</li>
       <li>Chilling
         <ul>
-          <li>movies</li>
-          <li>skating</li>
+          <li>Movies</li>
+          <li>Listening to Good Music</li>
+          <li>Skating</li>
           <li>Gaming</li>
         </ul>
       </li>
@@ -72,14 +73,14 @@
     <p>2 days later, i got the reply and was booked for the photo shoot, so i paid the photographer 250 Euros for it, meaning i worked for free at the Antwerp Fashion Weekend 2019</p>
   </article>
 
-  <p>Morals of the story, Sometimes, We can not see what distracts us from our purpose untill its too late, because how could we know </p>
+  <p>Sometimes, We can't see what distracts us from our purpose untill its too late, because how could we know </p>
 </section>
 
 <footer>
   
-<a href="https://minjie0501.github.io/css-introduction/" target="_blank">Min jie</a>
+<a href="https://minjie0501.github.io/css-introduction/" target="_blank">Previous &lt;&lt; Min jie</a>
 <a href="https://ffiinesse.github.io/html-introduction/" target="_blank">My Link</a>
-<a href="https://katyaheylen.github.io/html-introduction/" target="_blank">Heylen</a> 
+<a href="https://katyaheylen.github.io/html-introduction/" target="_blank">Heylen &gt;&gt; Next</a> 
 </footer>
 
 </body>
