add to index.html

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
 <footer>
   
-<a href="https://minjie0501.github.io/css-introduction/" target="_blank">Previous &lt;&lt; Min jie</a>
-<a href="https://ffiinesse.github.io/html-introduction/" target="_blank">My Link</a>
-<a href="https://katyaheylen.github.io/html-introduction/" target="_blank">Heylen &gt;&gt; Next</a> 
+<a href="https://minjie0501.github.io/css-introduction/" >Previous &lt;&lt; Min jie</a>
+<a href="https://ffiinesse.github.io/html-introduction/" >My Link</a>
+<a href="https://katyaheylen.github.io/html-introduction/" >Heylen &gt;&gt; Next</a> 
 </footer>
 
 </body>
