add to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
   <h2>Emmanuel Angelbert Fru Afong</h2>
   <h4><i> Don't Be Busy, Be Productive </i></h4>
-  <h4>A Curious Mind, a Heart For People And The Eyes Of A Designer</h4>
+  <h4>I Got A Curious Mind, a Heart For People And The Eyes Of A Designer</h4>
   <img src="ff.jpg" alt="ff" style="width:128px;height:128px;">
 </header>
 <h2>You Can Always Count On Me When</h2>
@@ -62,7 +62,7 @@
     </ul>  
   <article>
     
-    <h1>Story Time;</h1>
+    <h1>Story Time</h1>
     <p>2 years ago, When i started my Brand i went to a modelling agency to do a photo look book for the new collection</p>
     <p>Standing there, The manager looked at me and said "can you walk across the hall and walk right back let me see?"</p>
     <p>I said "sure why not", but in my head while i was walking i thought he was tripping or on some cheap drugs or something</p>
