add to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <header>
-  <h2>Emmanuel Angelbert Fru Afong</h2>
+  <h2>Emmanuel Angelbert</h2>
   <h4><i> Don't Be Busy, Be Productive </i></h4>
   <h4>I Got A Curious Mind, a Heart For People And The Eyes Of A Designer</h4>
   <img src="ff.jpg" alt="ff" style="width:128px;height:128px;">
